--- a/templates/layout.html
+++ b/templates/layout.html
@@ -210,7 +210,7 @@
 </style>
 </head>
 <body>
-{% if is_editor is False %}
+{% if debug_mode is False %}
 {% include 'metrics.html' %}
 {% endif %}
 <div class="container container-main">
