--- a/templates/widget/post-mini.html
+++ b/templates/widget/post-mini.html
@@ -5,10 +5,10 @@
                 <div class="panel-heading">
                     <img
                         alt="64x64"
-                        src="http://usin.club/wp-content/uploads/2016/08/man-icon-7.png"
+                        src="{{ item.ribbon.logo_url }}"
                         style="width: 32px; height: 32px; margin: -5px; display: inline-block;"
                     >
-                    <strong style="padding-left: 5px;">Психология</strong>
+                    <strong style="padding-left: 5px;">{{ item.ribbon.title }}</strong>
                 </div>
                 <div class="panel-body">
                     <h3 class="media-heading title"><a href="{{ item.url }}?from=list_title">{{ item.title }}</a></h3>
