post-mini img fix

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -87,9 +87,6 @@
     .footer-logo img{
         margin-right: 5px;
     }
-    .post-mini img{
-        width: 100%;
-    }
     .panel-default {
         border: 1px dashed #dddddd;
     }
@@ -101,7 +98,9 @@
     .panel-footer {
         padding: 5px 10px;
     }
-
+    .post-mini img{
+        max-width: 100%;
+    }
 
     header {
         background: #f0f0f0;
