--- a/templates/widget/post-mini.html
+++ b/templates/widget/post-mini.html
@@ -1,4 +1,4 @@
-<div id="post-item-{{ item.id }}" class="col-lg-12 {% if item.is_active %}toggle-0{% else %}toggle-1{% endif %}">
+<div id="post-item-{{ item.id }}" class="col-lg-12 post-mini {% if item.is_active %}toggle-0{% else %}toggle-1{% endif %}">
     <div class="media">
         <div class="media-body">
             <div class="panel panel-default">
