restyling index page

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,4 @@
-{% extends 'layout-9-3.html' %}
+{% extends 'layout-12.html' %}
 
 {% block title %}Супер блог{% endblock %}
 
@@ -8,4 +8,5 @@
         {% include wrapper_widget %}
     </div>
 </div>
+{% include 'widget/post-modal.html' %}
 {% endblock %}
