--- a/templates/widget/multi-column.html
+++ b/templates/widget/multi-column.html
@@ -1,5 +1,11 @@
 <div class="row">
-    {% for item in items %}
-        {% include item_widget %}
+    {% for column_items in items_by_columns.values %}
+    <div class="col-lg-4">
+        <div class="row">
+        {% for item in column_items %}
+            {% include item_widget %}
+        {% endfor %}
+        </div>
+    </div>
     {% endfor %}
 </div>
