--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,39 @@
     <div class="col-lg-12">
         {% include wrapper_widget %}
     </div>
+    <div class="col-lg-12">
+        <div class="row">
+            <dev class="col-lg-4"></dev>
+            <dev class="col-lg-4">
+                <button onclick="loadPosts();" class="btn btn-default btn-block">Загрузить ещё</button>
+            </dev>
+            <dev class="col-lg-4"></dev>
+        </div>
+    </div>
 </div>
 {% include 'widget/post-modal.html' %}
+<script>
+var currentPageNumber = 1;
+function loadPosts() {
+    $.ajax({
+        'url': '/page/' + currentPageNumber + '/',
+        'type': 'get',
+        'dataType': 'json',
+        'success': function(response){
+            console.log()
+            if(response.items.length < 1){
+                return null;
+            }
+            $.each(response.items, function (columnNumber, columnHtml) {
+                console.log(columnNumber, columnHtml)
+                $('#mc-column-'+columnNumber).append(columnHtml);
+            });
+            currentPageNumber += 1;
+        }
+    })
+}
+$(function () {
+    loadPosts();
+});
+</script>
 {% endblock %}
