--- a/templates/layout.html
+++ b/templates/layout.html
@@ -109,6 +109,11 @@
     .post-mini img{
         max-width: 100%;
     }
+    .post-mini .panel-content{
+        max-height: 300px;
+        overflow: hidden;
+        margin-bottom: 5px;
+    }
 
     header {
         background: #f0f0f0;
