--- a/templates/widget/post-mini.html
+++ b/templates/widget/post-mini.html
@@ -16,7 +16,7 @@
                 {% if item.image %}
                 <img alt="{{ item.title }}" src="{{ item.image }}" style="margin-bottom: 10px;">
                 {% endif %}
-                <div class="small">{{ item.annotation|safe }}</div>
+                <div class="small panel-content">{{ item.annotation|safe }}</div>
                 <a
                     class="btn btn-primary btn-sm btn-block"
                     href="{{ item.url }}?from=index"
