add soc widgets

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -236,6 +236,7 @@
 <div class="container container-main">
     {% block content %}{% endblock %}
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="//vk.com/js/api/openapi.js?139"></script>
 </div>
 {% if is_editor %}
 <script>
