--- a/templates/widget/social-net-line.html
+++ b/templates/widget/social-net-line.html
@@ -1,32 +1,33 @@
 <div class="social-net-line box-sizing-content">
     <div style="display: inline-block; margin-right: 40px;">
         <!-- Put this script tag to the <head> of your page -->
-        <script type="text/javascript" src="https://vk.com/js/api/share.js?94" charset="windows-1251"></script>
 
-        <!-- Put this script tag to the place, where the Share button will be -->
-        <script type="text/javascript"><!--
-        document.write(VK.Share.button(false,{type: "round", text: "Сохранить"}));
-        --></script>
-    </div>
-    <div style="display: inline-block; margin-right: 0px;">
-        <!-- Put this script tag to the <head> of your page -->
-        <script type="text/javascript" src="//vk.com/js/api/openapi.js?136"></script>
 
         <script type="text/javascript">
           VK.init({apiId: 5774235, onlyWidgets: true});
         </script>
+
         <!-- Put this div tag to the place, where the Like block will be -->
-        <div id="vk_like-{{ widget_id }}"></div>
+        <div id="vk_like"></div>
         <script type="text/javascript">
-        VK.Widgets.Like("vk_like-{{ widget_id }}", {type: "button"});
+        VK.Widgets.Like("vk_like", {type: "button", verb: 1, height: 24});
         </script>
     </div>
     <div style="display: inline-block; margin-right: 0px;">
-        <script type="text/javascript" src="//vk.com/js/api/openapi.js?136"></script>
-        <!-- VK Widget -->
-        <div id="vk_subscribe-{{ widget_id }}"></div>
-        <script type="text/javascript">
-        VK.Widgets.Subscribe("vk_subscribe-{{ widget_id }}", {soft: 1}, -117960257);
-        </script>
+
+        <div id="fb-root"></div>
+        <script>(function(d, s, id) {
+          var js, fjs = d.getElementsByTagName(s)[0];
+          if (d.getElementById(id)) return;
+          js = d.createElement(s); js.id = id;
+          js.src = "//connect.facebook.net/ru_RU/sdk.js#xfbml=1&version=v2.8&appId=1449687905310910";
+          fjs.parentNode.insertBefore(js, fjs);
+        }(document, 'script', 'facebook-jssdk'));</script>
+
+        <div class="fb-share-button" data-href="https://developers.facebook.com/docs/plugins/" data-layout="button_count" data-size="large" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&amp;src=sdkpreparse">Поделиться</a></div>
+
+    </div>
+    <div style="display: inline-block; margin-right: 0px;">
+
     </div>
 </div>
