--- a/templates/layout.html
+++ b/templates/layout.html
@@ -208,11 +208,11 @@
         display: none;
     }
     .social-net-line {
-        margin: 5px 0;
+        {% comment %}margin: 5px 0;
         padding: 5px 0;
         border-width: 1px 0;
         border-style: solid;
-        border-color: #efefef;
+        border-color: #efefef;{% endcomment %}
         font-size: 0;
     }
     .box-sizing-content *{
