--- a/templates/widget/social-net-line.html
+++ b/templates/widget/social-net-line.html
@@ -1,21 +1,15 @@
 <div class="social-net-line box-sizing-content">
     <div style="display: inline-block; margin-right: 40px;">
-        <!-- Put this script tag to the <head> of your page -->
-
-
         <script type="text/javascript">
           VK.init({apiId: 5774235, onlyWidgets: true});
         </script>
-
-        <!-- Put this div tag to the place, where the Like block will be -->
         <div id="vk_like"></div>
         <script type="text/javascript">
         VK.Widgets.Like("vk_like", {type: "button", verb: 1, height: 24});
         </script>
     </div>
     <div style="display: inline-block; margin-right: 0px;">
-
-        <div id="fb-root"></div>
+        {% comment %}<div id="fb-root"></div>
         <script>(function(d, s, id) {
           var js, fjs = d.getElementsByTagName(s)[0];
           if (d.getElementById(id)) return;
@@ -23,9 +17,7 @@
           js.src = "//connect.facebook.net/ru_RU/sdk.js#xfbml=1&version=v2.8&appId=1449687905310910";
           fjs.parentNode.insertBefore(js, fjs);
         }(document, 'script', 'facebook-jssdk'));</script>
-
-        <div class="fb-share-button" data-href="https://developers.facebook.com/docs/plugins/" data-layout="button_count" data-size="large" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&amp;src=sdkpreparse">Поделиться</a></div>
-
+        <div class="fb-share-button" data-layout="button" data-size="small" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u&amp;src=sdkpreparse">Поделиться</a></div>{% endcomment %}
     </div>
     <div style="display: inline-block; margin-right: 0px;">
 
